# retired-officers-new

./: .drone.yaml  .gitignore  Dockerfile  README.MD  django.sh  manage.py  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
admin_panel/: forms.py  urls.py
admin_panel/templates/: activity_create.html  activity_delete.html  activity_form.html  activity_list.html  activity_tool_menu.html  activity_update.html  score_label_create.html  score_label_list.html  score_label_update.html  score_list.html  student_activity_list.html  student_check_list.html  student_list.html  student_update.html  voluntary_school.html
admin_panel/templatetags/: zip.py
admin_panel/views/: activity_create.py  activity_delete.py  activity_list.py  activity_tool_menu.py  activity_update.py  export_excel.py  get_student_join_print.py  redirect_user.py  score_label_create.py  score_label_list.py  score_list.py  student_activity_list.py  student_check_list.py  student_delete.py  student_list.py  student_update.py  voluntary_school.py
core/: asgi.py  settings.py  urls.py  wsgi.py
myapp/: admin.py  forms.py  models.py  test_admin.py  urls.py
myapp/migrations/: 0001_initial.py  0002_alter_activity_score_label_and_more.py  0003_activity_score_open_time.py  0004_activity_sign_up_print_end_time.py  0005_alter_activity_activity_end_time_and_more.py  0006_activity_score_min.py  (+6 more)
myapp/views/: api_data.py  (+14 more)
static/: sample.docx  sample_score.docx  sample_sign_up.docx  school.csv  school_data.xlsx
templates/: 1404.html  403.html  404.html
user/: admin.py  check_identity.py  models.py
(+49 files in other folders)
